--- a/exercise24/build.gradle
+++ b/exercise24/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -16,4 +17,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+run {
+    standardInput = System.in
+}
+application {
+    mainClass = "baseline.Solution24"
 }
